turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:2: error: not found: type color
def setCouleurSol(couleur:color) {setCouleurBrosse(couleur);baisseBrosse();leveBrosse()}
                          ^